--- a/src/Trakx.Coinbase.Custody.ApiClient/ClientRegistrations.tt
+++ b/src/Trakx.Coinbase.Custody.ApiClient/ClientRegistrations.tt
@@ -12,14 +12,17 @@ using Polly.Contrib.WaitAndRetry;
 using Polly.Extensions.Http;
 using Serilog;
 
+<# var nameSpace = "Trakx.Coinbase.Custody.ApiClient"; #>
 
-namespace Trakx.Coinbase.Custody.ApiClient
+namespace <#= nameSpace #>
 {
     public static partial class AddCoinbaseCustodyClientExtension
     {
-        private static void AddClients(this IServiceCollection services)
+        private static void AddClients(this IServiceCollection services, CoinbaseCustodyApiConfiguration configuration)
         {
-            var delay = Backoff.DecorrelatedJitterBackoffV2(medianFirstRetryDelay: TimeSpan.FromMilliseconds(100), retryCount: 10, fastFirst: true);
+            var delay = Backoff.DecorrelatedJitterBackoffV2(
+                medianFirstRetryDelay: TimeSpan.FromMilliseconds(configuration.InitialRetryDelayInMilliseconds ?? 100), 
+                retryCount: configuration.MaxRetryCount ?? 10, fastFirst: true);
             <# 
             var clientNames = new [] { "AddressBookClient", "AddressesClient", "AddressesClient", "CurrenciesClient", "TransactionsClient",
                 "UsersClient", "WalletsClient" };
@@ -40,7 +43,7 @@ namespace Trakx.Coinbase.Custody.ApiClient
                             var logger = Log.Logger.ForContext<<#= name #>>();
                             LogFailure(logger, result, timeSpan, retryCount, context);
                         })
-                    .WithPolicyKey("<#= name #>"));
+                    .WithPolicyKey("<#= nameSpace #>.<#= name #>"));
 
         <#
         }
