--- a/src/Trakx.Coinbase.Custody.ApiClient/ClientRegistrations.tt
+++ b/src/Trakx.Coinbase.Custody.ApiClient/ClientRegistrations.tt
@@ -31,7 +31,7 @@ namespace <#= nameSpace #>
             {
             #>
                         
-            services.AddHttpClient<I<#= name #>, <#= name #>>()
+            services.AddHttpClient<I<#= name #>, <#= name #>>("<#= nameSpace #>.<#= name #>")
                 .AddPolicyHandler((s, request) => 
                     Policy<HttpResponseMessage>
                     .Handle<ApiException>()
